--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         echo "::set-output name=public_key::$(cat ~/.ssh/id_rsa.pub)"  # Store public key in output
         echo "PUBLIC_KEY=$(cat ~/.ssh/id_rsa.pub)" >> $GITHUB_OUTPUT
 
-    - name: Set up SSH agent
+    - name: use key in next steps
       run: echo ${{ steps.ssh_key.outputs.PUBLIC_KEY }}
